# pd-django-small

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yaml  generators_memory_usage.py  manage.py  pyproject.toml
.github/workflows/: post-commit-check.yml  unit.job.yml
pd_django_small/: asgi.py  settings.py  urls.py  wsgi.py
pd_django_small/organizations/: apps.py  models.py
pd_django_small/organizations/migrations/: 0001_initial.py
pd_django_small/organizations/tests/: fixtures.py  test_queries.py
pd_django_small/subscriptions/: apps.py  models.py
pd_django_small/subscriptions/migrations/: 0001_initial.py
pd_django_small/subscriptions/tests/: fixtures.py  test_queries.py
pd_django_small/users/: apps.py  models.py
pd_django_small/users/migrations/: 0001_initial.py
pd_django_small/users/tests/: fixtures.py  test_queries.py
pd_django_small/workspaces/: apps.py  models.py
pd_django_small/workspaces/migrations/: 0001_initial.py  0002_remove_workspace_id_workspace_created_at_and_more.py
pd_django_small/workspaces/tests/: fixtures.py  test_ci.py  test_queries.py
