[tool.poetry]
name = "pd-django-small"
version = "0.1.0"
description = ""
authors = ["Arthur Feduniv <arthur.feduniv@pandadoc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg = "^3.1.9"
django-shortuuidfield = "^0.1.3"
memory-profiler = "^0.61.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-django = "^4.5.2"
pytest-faker = "^2.0.0"
pytest-factoryboy = "^2.5.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = ["test_*.py", "*_test.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
